# jdp

./: Cargo.toml  README.adoc
.github/workflows/: release.yml  rust.yml
data/invalid/empty-pipeline/: Jenkinsfile
data/invalid/empty-stages/: Jenkinsfile
data/invalid/no-steps-in-stage/: Jenkinsfile
data/invalid/no-steps-in-steps/: Jenkinsfile
data/invalid/scripted-pipeline/: Jenkinsfile
data/invalid/two-top-level-agents/: Jenkinsfile
data/valid/agent-docker/: Jenkinsfile
data/valid/agent-dockerfile/: Jenkinsfile
data/valid/agent-kubernetes/: Jenkinsfile
data/valid/agent-node/: Jenkinsfile
data/valid/agent-none/: Jenkinsfile
data/valid/complex-deployment/: Jenkinsfile
data/valid/dynamic-env/: Jenkinsfile.not-yet-parsed
data/valid/effectively-scripted-wrapped-by-declarative/: Jenkinsfile
data/valid/env-with-credentials/: Jenkinsfile
data/valid/generated-parallel-wrapped-by-declarative/: Jenkinsfile
data/valid/global-post-directive/: Jenkinsfile
data/valid/monorepo-with-shared-library-steps/: Jenkinsfile
data/valid/nested-agents/: Jenkinsfile
data/valid/out-of-order/: Jenkinsfile
data/valid/shebang/: Jenkinsfile
data/valid/simple/: Jenkinsfile
data/valid/simple-input/: Jenkinsfile
data/valid/stage-post-directive/: Jenkinsfile
data/valid/step-with-kwargs/: Jenkinsfile
data/valid/upstream-trigger-parameters/: Jenkinsfile
data/valid/when-before-input/: Jenkinsfile
data/valid/when-branch/: Jenkinsfile
scripts/: declarative-linter
src/: lib.rs  main.rs  pipeline.pest
tests/: valid.rs
(+33 files in other folders)
