[package]
name = "jdp"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"


[lib]
name = "jdp"
path = "src/lib.rs"

[[bin]]
name = "jdp"
path = "src/main.rs"

[dependencies]
gumdrop = "~0.8.0"
log = "~0.4.11"
pest = "~2.1.3"
pest_derive = "~2.1.0"
pretty_env_logger = "~0.4.0"

[dev-dependencies]
glob = "0.3"
