[package]
name = "jdp"
version = "0.2.3"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"
description = "A Rust-native parser for Jenkins Declarative Pipeline"
homepage = "https://github.com/rtyler/jdp"
repository = "https://github.com/rtyler/jdp"
license = "LGPL-3.0+"
keywords = ["jenkins", "pipeline"]


[lib]
name = "jdp"
path = "src/lib.rs"

[[bin]]
name = "jdp"
path = "src/main.rs"

[dependencies]
gumdrop = "0.8"
lazy_static = "1"
log = "0.4"
pest = "2"
pest_derive = "2"
pretty_env_logger = "0.4"
regex = "1"

[dev-dependencies]
glob = "0.3"
